<resources>
    <string name="app_name">doskaOb</string>
    <string name="my_ads">Объявления</string>
    <string name="cars_ads">Машины</string>
    <string name="PC_ads">Компьютеры</string>
    <string name="phones_ads">Телефоны</string>
    <string name="dm_ads">Бытовая техника</string>
    <string name="sign_up">Регистрация</string>
    <string name="sign_in">Вход</string>
    <string name="sign_out">Выход</string>
    <string name="account">Аккаунт</string>
    <string name="Email">Email</string>
    <string name="Password">password</string>
    <string name="sign_up_button">Зарегистрироваться</string>
    <string name="sign_in_button">Войти</string>
    <string name="sign_in_or_sign_up">Войдите/зарегистрируйтесь</string>
    <!-- EditActivity-->
    <string name="edit_ac_title">Название</string>
    <string name="edit_ac_price">Цена</string>
    <string name="edit_ac_description">Описание</string>
    <string name="edit_ac_phone">Телефон</string>

    <string name="toggle_open">Open</string>
    <string name="toggle_close">Close</string>

    <!-- PostAdapter-->
    <string name="delete_title">удалить объявление</string>
    <string name="delete_message">Вы действительно хотите удалить объявление?</string>
    <string name="yes">Да</string>
    <string name="no">Нет</string>


</resources>