<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn='navigation_view'>
    <group android:checkableBehavior="single">
        <item android:title="@string/my_ads"
            android:id='@+id/id_my_ads'
            android:icon='@drawable/my_ads'/>
        <item android:title="@string/cars_ads"
            android:id='@+id/id_cars_ads'
            android:icon='@drawable/cars_ads'/>
        <item android:title="@string/PC_ads"
            android:id='@+id/id_pc_ads'
            android:icon='@drawable/pc_ads'/>
        <item android:title="@string/phones_ads"
            android:id='@+id/id_phones_ads'
            android:icon='@drawable/phone_ads'/>
        <item android:title="@string/dm_ads"
            android:id='@+id/id_dm_ads'
            android:icon='@drawable/dm_ads'/>
        <item android:title="@string/sign_up"
            android:id='@+id/id_sign_up'
            android:icon='@drawable/sign_up'/>
        <item android:title="@string/sign_in"
            android:id='@+id/id_sign_in'
            android:icon='@drawable/sign_in'/>
        <item android:title="@string/sign_out"
            android:id='@+id/id_sign_out'
            android:icon='@drawable/sign_out'/>

    </group>

</menu>