<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <ImageView
        android:id="@+id/imItem"
        android:layout_width="0dp"
        android:layout_height="200dp"
        android:layout_marginStart="10dp"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="10dp"
        android:onClick="onClickImage"
        android:src="@android:drawable/ic_menu_view"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:srcCompat="@android:drawable/ic_menu_view" />

    <EditText
        android:id="@+id/edTitle"
        android:layout_width="396dp"
        android:layout_height="55dp"
        android:layout_marginStart="10dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="10dp"
        android:ems="10"
        android:hint="@string/edit_ac_title"
        android:inputType="textPersonName"
        app:layout_constraintEnd_toEndOf="@+id/imItem"
        app:layout_constraintHorizontal_bias="0.541"
        app:layout_constraintStart_toStartOf="@+id/imItem"
        app:layout_constraintTop_toBottomOf="@+id/spinner" />

    <EditText
        android:id="@+id/edPrice"
        android:layout_width="395dp"
        android:layout_height="59dp"
        android:layout_marginTop="8dp"
        android:ems="10"
        android:hint="@string/edit_ac_price"
        android:inputType="textPersonName"
        app:layout_constraintEnd_toEndOf="@+id/edTitle"
        app:layout_constraintStart_toStartOf="@+id/edTitle"
        app:layout_constraintTop_toBottomOf="@+id/edTitle" />

    <EditText
        android:id="@+id/edPhone"
        android:layout_width="396dp"
        android:layout_height="54dp"
        android:layout_marginTop="8dp"
        android:ems="10"
        android:hint="@string/edit_ac_phone"
        android:inputType="textPersonName"
        app:layout_constraintEnd_toEndOf="@+id/edPrice"
        app:layout_constraintStart_toStartOf="@+id/edPrice"
        app:layout_constraintTop_toBottomOf="@+id/edPrice" />

    <EditText
        android:id="@+id/edDesc"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginTop="8dp"
        android:layout_marginBottom="10dp"
        android:ems="10"
        android:gravity="top"
        android:hint="@string/edit_ac_description"
        android:inputType="textMultiLine|textPersonName"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="@+id/edPhone"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/edPhone"
        app:layout_constraintTop_toBottomOf="@+id/edPhone"
        app:layout_constraintVertical_bias="1.0" />

    <Spinner
        android:id="@+id/spinner"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:background="@android:drawable/spinner_background"
        app:layout_constraintEnd_toEndOf="@+id/imItem"
        app:layout_constraintStart_toStartOf="@+id/imItem"
        app:layout_constraintTop_toBottomOf="@+id/imItem" />

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/floatingActionButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="16dp"
        android:layout_marginBottom="16dp"
        android:clickable="true"
        android:onClick="onClickSavePost"
        app:backgroundTint="#F48C8C"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:srcCompat="@drawable/ic_save" />
</androidx.constraintlayout.widget.ConstraintLayout>